--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,5 +20,6 @@ jobs:
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
           ldflags: -s -w -X main.Version=${{ github.ref_name }}
+          project_path: ./cmd/renv
           md5sum: false
           sha256sum: false
